--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ body.dark-mode #toggleButton:hover {
     font-weight: bold;
     text-transform: uppercase;
     color: #003366;
-    background-color: white;
+    background-color: rgba(0,  0,  0,  0.0);
     border: 3px solid;
     border-image: linear-gradient(45deg, #003366, #0059b3, #82b1ff, #bbdefb) 1;
     border-radius: 10px;
